<?xml version="1.0"?>
<package>
  <name>oxford_gps_eth</name>
  <version>0.0.0</version>
  <description>
    Ethernet interface to the Oxford GPS (NCOM packet structure)
  </description>

  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>

</package>
